# VeloGo

./: .env  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
