[tool.poetry]
name = "velogo"
version = "0.1.0"
description = "VeloGo is a bike rental service implemented on Django."
authors = ["AlexanderLukash <sashass20062727@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-environ = "^0.11.2"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
